--- a/app/views/user_mailer/send_winner_email.html.erb
+++ b/app/views/user_mailer/send_winner_email.html.erb
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html>
- <head>
-   <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
- </head>
- <body>
-   <h1>Hi, <%= @winner %> </h1>
-     <h2>Congratulations! You have won an item on Raffler!</h2>
-   <p>
-     To login to the site, just follow this <a href="<%= @url %>">link</a>.
-   </p>
-   <p>Thank you for bidding and have a great day!</p>
- </body>
+
+<head>
+    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
+</head>
+
+<body>
+    <h1>Hi,
+      <%= @winner %>
+    </h1>
+    <h2>Congratulations! You have won an item on Raffler!</h2>
+    <p>
+        To login to the site, just follow this
+        <a href="<%= @url %>">link</a>.
+    </p>
+    <p>Thank you for bidding and have a great day!</p>
+</body>
+
 </html>
