--- a/app/views/bids/index.html.erb
+++ b/app/views/bids/index.html.erb
@@ -10,8 +10,9 @@
 <table>
   <thead>
     <tr>
-      <th>User</th>
+      <th>Bidder</th>
       <th>Item</th>
+      <th>Seller</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -19,10 +20,9 @@
   <tbody>
     <% @bids.each do |bid| %>
       <tr>
-        <td><%= bid.user.email %></td>
-
-        <!-- Display the item IF it has a bid -->
+        <td><%= bid.user.profile.username %></td>
         <td><%= bid.item.name %></td>
+        <td><%= bid.seller.profile.username %></td>
         <td><%= link_to 'Draw Details', bid %></td>
         <td><%#= link_to 'Edit', edit_bid_path(bid) %></td>
         <td><%#= link_to 'Destroy', bid, method: :delete, data: { confirm: 'Are you sure?' } %></td>
