--- a/app/views/user_mailer/send_bid_receipt.html.erb
+++ b/app/views/user_mailer/send_bid_receipt.html.erb
@@ -8,9 +8,9 @@
 <body>
 
     <h1>Hi,
-      <%= @bidder.email %>
+      <%= @bidder.profile.first_name %>
     </h1>
-    <h2>Thank you for your purchase!</h2>
+    <h2>Thank you for your recent purchase on Raffler!</h2>
 
     <hr>
 
@@ -21,7 +21,7 @@
     </p>
 
     <p>Tax Invoice Issue Date:
-        <%= Time.now %>
+        <%= Time.now.strftime("%d %B, %Y") %>
     </p>
 
     <p>Total:
