--- a/app/views/user_mailer/send_seller_email.html.erb
+++ b/app/views/user_mailer/send_seller_email.html.erb
@@ -6,21 +6,21 @@
 </head>
 
 <body>
-  <h1>Hi <%= @winner.profile.first_name %>,</h1>
+  <h1>Hi <%= @seller.profile.first_name %>,</h1>
 
-  <h2>Congratulations! You have won the following item on Raffler!</h2>
-
-  </p>
+  <h2>Your item has just been sold on Raffler!</h2>
 
   <h3><%= @item.name %></h3>
 
   <p><%= @item.description %></p>
 
+  <h2>You have made a total of <%= number_to_currency(@draw_total) %> from this sale.</h2>
+
 <hr />
 
   <p>To login to the site, just follow this <a href="<%= @url %>">link</a>.</p>
 
-  <p>Thank you for bidding on Raffler. We hope you see you again!</p>
+  <p>Thank you for contributing to Raffler and have a great day!</p>
 </body>
 
 </html>
