--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -23,7 +23,7 @@
         <td><%= number_to_currency(item.price) %></td>
         <td><%#= link_to 'Show', item %></td>
         <td><%#= link_to 'Edit', edit_item_path(item) %></td>
-        <td><%#= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
