--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -8,26 +8,20 @@
 <% end %>
 
 <table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Bid Price</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @items.each do |item| %>
-      <tr>
-        <td><%= link_to "#{item.name}", item %></td>
-        <td><%= number_to_currency(item.price) %></td>
-        <td><%#= link_to 'Show', item %></td>
-        <td><%#= link_to 'Edit', edit_item_path(item) %></td>
-        <td><%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+      <tbody>
+        <% @items.each do |item| %>
+          <tr>
+            <td><%= image_tag item.item_image.url(:thumb) %></td>
+            <td><%= link_to "#{item.name}", item %></td>
+            <td><%= number_to_currency(item.price) %></td>
+            <td><%#= link_to 'Show', item %></td>
+            <td><%#= link_to 'Edit', edit_item_path(item) %></td>
+            <td><%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+      </tbody>
+    </table>
+  <hr />
+<% end %>
 
 <br>
 
