optimise UX, minor bug fixes

--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -23,7 +23,7 @@
 
   <div class="field">
     <%= f.label :price %>
-    <%= f.text_field :price %>
+  $ <%= f.text_field :price %>
   </div>
 
   <div class="field">
