--- a/app/views/sellers/_form.html.erb
+++ b/app/views/sellers/_form.html.erb
@@ -11,17 +11,15 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :user_id %>
-    <%= f.text_field :user_id %>
-  </div>
-
-  <div class="field">
-    <%= f.label :seller_rating %>
-    <%= f.number_field :seller_rating %>
-  </div>
+<h3>Terms and Conditions:</h3>
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean in sem ac mauris convallis sodales ut nec erat. Pellentesque maximus egestas augue sit amet tincidunt. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Fusce sem odio, rutrum ut augue vitae, ornare ullamcorper elit. Curabitur vitae tellus posuere, lobortis erat eget, varius erat. Quisque quis quam non velit fermentum rutrum in et dolor. Nunc enim est, lacinia ac molestie at, feugiat quis lacus. Mauris sagittis lorem id erat iaculis, eu maximus arcu dignissim.
+    <br />
+    <br />
+    Ut lobortis ultricies risus eget convallis. Nam sed sem lacinia, finibus sem id, efficitur enim. Phasellus gravida sem at velit ullamcorper, nec viverra enim ornare. Pellentesque posuere risus nec ante ornare facilisis. Morbi vitae lacus ut urna cursus sodales. Etiam nibh lectus, posuere non ornare vitae, volutpat at nisl. Mauris finibus felis vitae mi luctus, at aliquet urna bibendum. Aenean interdum, eros et scelerisque iaculis, ligula ligula iaculis mauris, id ornare nibh ligula non ante. Nunc aliquam ultricies volutpat. Pellentesque quis purus ut nulla fringilla pellentesque. Mauris sagittis libero velit, in porta arcu euismod vel. Aliquam eleifend ultrices dolor, vitae dignissim augue viverra quis. Nunc posuere neque in aliquet hendrerit. Phasellus in tortor sem.
+  </p>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit 'I Agree' %>
   </div>
 <% end %>
