--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -1,5 +1,3 @@
-<h1>New Profile</h1>
+<h1>Please enter your Profile details</h1>
 
 <%= render 'form', profile: @profile %>
-
-<%= link_to 'Back', profiles_path %>
