--- a/app/views/sellers/new.html.erb
+++ b/app/views/sellers/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Seller</h1>
+<h1>Register As A Seller On Raffler</h1>
 
 <%= render 'form', seller: @seller %>
 
-<%= link_to 'Back', sellers_path %>
+<%= link_to 'Back', items_path %>
