--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -1,6 +1,6 @@
 <h1>Welcome to Raffler!</h1>
 
-What is Raffler?
+<%= link_to 'What is Raffler?', 'https://1drv.ms/p/s!AtM30fNCNt04mhfA-JqnUmBgtnfK' %>
 
 <h1><%= link_to 'Sign Up', new_user_registration_path  %></h1>
 <h1><%= link_to 'Login', new_user_session_path  %></h1>
