--- a/app/views/sellers/index.html.erb
+++ b/app/views/sellers/index.html.erb
@@ -17,7 +17,7 @@
         <td><%= seller.user %></td>
         <td><%= seller.seller_rating %></td>
         <td><%= link_to 'Show', seller %></td>
-        <td><%= link_to 'Edit', edit_seller_path(seller) %></td>
+        <td><%= link_to 'Edit', edit_seller_path %></td>
         <td><%= link_to 'Destroy', seller, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
