--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,15 +1,20 @@
-<%= image_tag @item.item_image.url(:medium) %>
+<!-- Breadcrumbs -->
+<ol class="breadcrumb">
+  <li class="breadcrumb-item"><%= link_to 'Home', root_path %></li>
+  <li class="breadcrumb-item"><%= link_to 'Items', items_path %></li>
+  <li class="breadcrumb-item active"><%= "#{@item.name}" %></li>
+</ol>
+
+<%= image_tag @item.item_image.url(:medium) %><br>
+
+<%= is_admin_edit %>
 
 <h1><%= @item.name %></h1>
-
-<h3>Seller: <%= @item.seller.profile.username %></h3>
-
-<h3>Bid Price: <%= number_to_currency(@item.price) %></h3>
-
+<h4 class="text-muted">Seller: <%= @item.seller.profile.username %></h4>
 <h3>Description:</h3>
 <p><%= @item.description %></p>
-
-<br />
+<hr>
+<h4>Bid Price: <%= number_to_currency(@item.price) %></h4>
 
 <!-- Stripe Payment Button -->
 <%= form_tag charges_path do %>
@@ -22,7 +27,7 @@
         <% end %>
     </article>
 
-<h3>Interested in this item? Bid now!</h3>
+<h4>Interested in this item? Bid now!</h4>
 
   <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
           data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
@@ -33,7 +38,3 @@
           data-locale="auto">
   </script>
 <% end %>
-
-<hr>
-<%= link_to 'Edit', edit_item_path(@item) %> |
-<%= link_to 'Back', items_path %>
