--- a/app/views/nav/_links.html.erb
+++ b/app/views/nav/_links.html.erb
@@ -23,25 +23,31 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to 'RAFFLER Online', new_user_session_path, class: "navbar-brand" %>
+      <%= link_to 'RAFFLER Online', root_path, class: "navbar-brand" %>
     </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
+<!-- Nav -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><%= link_to 'Register', new_user_registration_path, class: "active" %><span class="sr-only">(current)</span></li>
         <li><%= link_to 'Login', new_user_session_path  %></li>
+<!-- Admin Nav -->
+        <% if (user_signed_in?) && current_user.id == 999 %>
+          <li><%= link_to 'Bids', bids_path %></li>
+        <% end %>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to('Logout', destroy_user_session_path, :method => :delete) %></li>
+        <% if (user_signed_in?) && !(current_page?(new_profile_path)) %>
+          <li><%= link_to('Logout', destroy_user_session_path, :method => :delete) %></li>
+        <% end %>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu<span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><%= link_to 'Items', items_path %></li>
             <li><a href="#">Bids</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Seller Dashboard</a></li>
+            <li><a href="#">Your Seller Dashboard</a></li>
             <li><a href="#">Admin Dashboard</a></li>
           </ul>
         </li>
