--- a/app/views/bids/index.html.erb
+++ b/app/views/bids/index.html.erb
@@ -20,6 +20,7 @@
         <th>Seller</th>
         <th>First Bid Time</th>
         <th>No. of Bidders</th>
+        <th>Draw Schedule</th>
         <th></th>
       </tr>
     </thead>
@@ -36,6 +37,7 @@
             <% end %>
           </td>
           <td><span class="badge badge-default badge-pill"><%= show.bids.count %></span></td>
+          <td><%= distance_of_time_in_words(Time.now, show.created_at + 7.days) %></td>
           <td><%= link_to 'Draw Details', bid_path(show.bids.map(&:id)), class: "btn btn-primary btn-md" %></td>
         </tr>
       <% end %>
