--- a/app/views/sellers/show.html.erb
+++ b/app/views/sellers/show.html.erb
@@ -22,11 +22,9 @@
 
     <div class="media-body">
       <h4><%= link_to "#{item.name}", item, class: "media-heading" %></h4>
-      <small>Added: <%= time_ago_in_words(item.created_at) %> ago</small>
+      <p>Draw Schedule: <strong><%= distance_of_time_in_words(Time.now, item.created_at + 7.days) %></strong></p>
+      <small>Added: <%= time_ago_in_words(item.created_at) %> ago</small><br>
       <h3><%= number_to_currency(item.price) %></h2>
-        <button type="button" class="btn btn-default">
-          <%= link_to 'Draw Item Now', controller: "bids", action: "send_winner_email" %>
-        </button>
     </div>
   </div>
 <hr>
