--- a/app/views/bids/index.html.erb
+++ b/app/views/bids/index.html.erb
@@ -38,7 +38,7 @@
           </td>
           <td><span class="badge badge-default badge-pill"><%= show.bids.count %></span></td>
           <td><%= distance_of_time_in_words(Time.now, show.created_at + 7.days) %></td>
-          <td><%= link_to 'Draw Details', bid_path(show.bids.map(&:id)), class: "btn btn-primary btn-md" %></td>
+          <td><%= link_to 'Draw Details', bid_path(show.bids.map(&:id).first), class: "btn btn-primary btn-md" %></td>
         </tr>
       <% end %>
     </tbody>
