--- a/app/views/bids/edit.html.erb
+++ b/app/views/bids/edit.html.erb
@@ -2,6 +2,6 @@
 
 <%= render 'form', bid: @bid %>
 
-<%= link_to 'Show', @bid %> |
+<%= link_to 'Show', @bid %>
+|
 <%= link_to 'Back', bids_path %>
-Hello
