--- a/app/views/charges/create.html.erb
+++ b/app/views/charges/create.html.erb
@@ -1,9 +1,15 @@
-<h1> Your payment has been processed </h1>
+<h1>
+  Your payment has been processed
+</h1>
 
-<p> Thank you for your payment. </p>
+<p>
+  Thank you for your payment.
+</p>
 
-<p> You have now been added to the draw for a chance to win #item! </p>
+<p>
+  You have now been added to the draw for a chance to win #item!
+</p>
 
-<h2> Good Luck! </h2>
-
-#Click here to continue shopping!
+<h2>
+  Good Luck!
+</h2>
