--- a/app/views/user_mailer/send_bid_receipt.html.erb
+++ b/app/views/user_mailer/send_bid_receipt.html.erb
@@ -1,24 +1,33 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
-</head>
+  <head>
+    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'/>
+  </head>
 
-<body>
-  <h1>Hi, <%= @bidder.profile.first_name %></h1>
-  <h2>Thank you for your recent purchase on Raffler!</h2>
-  <h2>Your tax invoice can be viewed below:</h2>
+  <body>
+    <h1>Hi,
+      <%= @bidder.profile.first_name %></h1>
+    <h2>Thank you for your recent purchase on Raffler!</h2>
+    <h2>Your tax invoice can be viewed below:</h2>
 
-<hr>
+    <hr>
 
-  <h2>Tax Invoice</h2>
-    <p><strong>Item:</strong> <%= @item.name %></p>
-    <p><strong>Tax Invoice Issue Date:</strong> <%= Time.now.strftime("%d %B, %Y") %></p>
-    <p><strong>Total:</strong> <%= number_to_currency(@amount / 100) %></p>
+    <h2>Tax Invoice</h2>
+    <p>
+      <strong>Item:</strong>
+      <%= @item.name %></p>
+    <p>
+      <strong>Tax Invoice Issue Date:</strong>
+      <%= Time.now.strftime("%d %B, %Y") %></p>
+    <p>
+      <strong>Total:</strong>
+      <%= number_to_currency(@amount / 100) %></p>
 
-<hr>
+    <hr>
 
-  <p>To login to the site, just follow this <a href="<%= @url %>">link</a></p>
-  <p>Thank you for contributing to Raffler and have a great day!</p>
-</body>
+    <p>To login to the site, just follow this
+      <a href="<%= @url %>">link</a>
+    </p>
+    <p>Thank you for contributing to Raffler and have a great day!</p>
+  </body>
 </html>
